2003-12-13  David N. Welton  <davidw@dedasys.com>

	* src/configure.in.tcl: Merge apxs and Tcl CFLAGS in order to
	include what we need from both.  Hopefully there won't be any
	conflicts.

2003-11-27  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Added information about debugging Apache/Rivet.

2003-11-20  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Changed xsltproc lines to deal with new link
	styles.

	* doc/rivet.xml: Changed links as in Russian translation.

	* doc/rivet.it.xml: Changed links as in Russian translation.

	* doc/rivet.ru.xml: Changed links to use "en.html" style instead
	of "html.en".  This will make google pick up the pages.

2003-10-22  David N. Welton  <davidw@dedasys.com>

	* win/: Numerous updates from Pat Thoyts
	<patthoyts@users.sourceforge.net>.

2003-09-30  David N. Welton  <davidw@dedasys.com>

	* src/rivetCore.c (Rivet_Include): More ref count management.

	* src/mod_rivet.c (Rivet_PropagatePerDirConfArrays): Added more
	ref count management.

	* src/rivetParser.c (Rivet_GetRivetFile): Add ref counting for
	'inbuf'.

	* src/mod_rivet.c (Rivet_ParseExecFile): Manage ref count for
	outbuf better.
	(Rivet_SendContent): Clean up 'info script' code.
	(Rivet_InitTclStuff): Rework 'if' to eliminate double assignment.

	* src/TclWebapache.c (TclWeb_GetEnvVars): Add ref counting for
	envvar.
	(TclWeb_GetHeaderVars): Fix ref counting for headersvar.

	* tests/headers.test: Added test for load_headers.

	* src/apache_request.h: Updates from httpd-apreq.

	* src/apache_request.c: Updates from httpd-apreq.

2003-09-29  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/commserver/server.tcl: Exit 1 on failure.

	* rivet/packages/commserver/commserver.tcl: Check to make sure the
	server is really running before returning from commserver::start.

	* rivet/packages/simpledb/simpledb.tcl: Added 'simpledb', although
	it's not ready for production use.

	* src/mod_rivet.c (Rivet_ChildInit): If we don't have separate