@@ -1,5 +1,11 @@
 2003-12-13  David N. Welton  <davidw@dedasys.com>
 
+	* src/rivetParser.c (Rivet_Parser): "export" function in that it's
+	no longer static.
+
+	* src/parserPkgInit.c (Parse_RivetData): New alpha-ish command to
+	parse data passed to the script.
+
 	* src/configure.in.tcl: Merge apxs and Tcl CFLAGS in order to
 	include what we need from both.  Hopefully there won't be any
 	conflicts.
